// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test allowedDates prop 1`] = `
"<div class=\\"var-date-picker\\">
  <div class=\\"var-date-picker-title\\">
    <div class=\\"var-date-picker-title__year\\">2021</div>
    <div class=\\"var-date-picker-title__date var-date-picker-title__date--active\\">
      <transition-stub>
        <div>03-01 星期一</div>
      </transition-stub>
    </div>
  </div>
  <div class=\\"var-date-picker-body\\">
    <transition-stub>
      <div class=\\"var-day-picker__panel\\">
        <div class=\\"var-day-picker__content\\">
          <div class=\\"var-picker-header\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-default var-button--round\\" style=\\"filter: opacity(0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: transform 0ms;\\"></i></div>
            </button>
            <div class=\\"var-picker-header__value\\">
              <transition-stub>
                <div>2021 三月</div>
              </transition-stub>
            </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-default var-button--round\\" style=\\"filter: opacity(0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: transform 0ms;\\"></i></div>
            </button>
          </div>
          <transition-stub>
            <div>
              <ul class=\\"var-day-picker__head\\">
                <li>日</li>
                <li>一</li>
                <li>二</li>
                <li>三</li>
                <li>四</li>
                <li>五</li>
                <li>六</li>
              </ul>
              <ul class=\\"var-day-picker__body\\"></ul>
            </div>
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test datePicker style and type 1`] = `
"<div class=\\"var-date-picker var-elevation--2\\">
  <div class=\\"var-date-picker-title\\" style=\\"background: purple;\\">
    <div class=\\"var-date-picker-title__year\\">2021</div>
    <div class=\\"var-date-picker-title__date var-date-picker-title__date--active\\">
      <transition-stub>
        <div>五月</div>
      </transition-stub>
    </div>
  </div>
  <div class=\\"var-date-picker-body\\">
    <transition-stub>
      <div class=\\"var-month-picker__panel\\">
        <div class=\\"var-month-picker__content\\">
          <div class=\\"var-picker-header\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-default var-button--round\\" style=\\"filter: opacity(0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: transform 0ms;\\"></i></div>
            </button>
            <div class=\\"var-picker-header__value\\">
              <transition-stub>
                <div>2021</div>
              </transition-stub>
            </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-default var-button--round\\" style=\\"filter: opacity(0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: transform 0ms;\\"></i></div>
            </button>
          </div>
          <transition-stub>
            <ul>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">一月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">二月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">三月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">四月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-elevation--2 var-button--primary var-month-picker__button\\" style=\\"background: rgb(123, 184, 114);\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"false\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">五月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">六月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">七月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">八月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">九月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">十月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">十一月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">十二月</div>
                </button></li>
            </ul>
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test datePicker style and type 2`] = `
"<div class=\\"var-date-picker var-elevation--2\\">
  <div class=\\"var-date-picker-title\\" style=\\"background: purple;\\">
    <div class=\\"var-date-picker-title__year\\">2021</div>
    <div class=\\"var-date-picker-title__date var-date-picker-title__date--active\\">
      <transition-stub>
        <div>05-19 星期三</div>
      </transition-stub>
    </div>
  </div>
  <div class=\\"var-date-picker-body\\">
    <transition-stub>
      <div class=\\"var-day-picker__panel\\">
        <div class=\\"var-day-picker__content\\">
          <div class=\\"var-picker-header\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-default var-button--round\\" style=\\"filter: opacity(0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: transform 0ms;\\"></i></div>
            </button>
            <div class=\\"var-picker-header__value\\">
              <transition-stub>
                <div>2021 五月</div>
              </transition-stub>
            </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-default var-button--round\\" style=\\"filter: opacity(0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: transform 0ms;\\"></i></div>
            </button>
          </div>
          <transition-stub>
            <div>
              <ul class=\\"var-day-picker__head\\">
                <li>日</li>
                <li>一</li>
                <li>二</li>
                <li>三</li>
                <li>四</li>
                <li>五</li>
                <li>六</li>
              </ul>
              <ul class=\\"var-day-picker__body\\">
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\"></div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\"></div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\"></div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\"></div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\"></div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\"></div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">1</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">2</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">3</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">4</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">5</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">6</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">7</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">8</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">9</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">10</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">11</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">12</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">13</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">14</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">15</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">16</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">17</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">18</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-elevation--2 var-button--primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"false\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">19</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">20</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">21</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">22</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">23</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">24</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">25</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">26</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">27</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">28</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">29</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">30</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">31</div>
                  </button></li>
              </ul>
            </div>
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test datePicker style and type test datePicker style and date 1`] = `
"<div class=\\"var-date-picker var-elevation--2\\">
  <div class=\\"var-date-picker-title\\" style=\\"background: purple;\\">
    <div class=\\"var-date-picker-title__year\\">2021</div>
    <div class=\\"var-date-picker-title__date var-date-picker-title__date--active\\">
      <transition-stub>
        <div>04-08 星期四</div>
      </transition-stub>
    </div>
  </div>
  <div class=\\"var-date-picker-body\\">
    <transition-stub>
      <div class=\\"var-day-picker__panel\\">
        <div class=\\"var-day-picker__content\\">
          <div class=\\"var-picker-header\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-default var-button--round\\" style=\\"filter: opacity(0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: transform 0ms;\\"></i></div>
            </button>
            <div class=\\"var-picker-header__value\\">
              <transition-stub>
                <div>2021 四月</div>
              </transition-stub>
            </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-default var-button--round\\" style=\\"filter: opacity(0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: transform 0ms;\\"></i></div>
            </button>
          </div>
          <transition-stub>
            <div>
              <ul class=\\"var-day-picker__head\\">
                <li>日</li>
                <li>一</li>
                <li>二</li>
                <li>三</li>
                <li>四</li>
                <li>五</li>
                <li>六</li>
              </ul>
              <ul class=\\"var-day-picker__body\\">
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\"></div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\"></div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\"></div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\"></div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">1</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">2</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">3</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">4</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">5</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">6</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">7</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-elevation--2 var-button--primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"false\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">8</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">9</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">10</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">11</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">12</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">13</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">14</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">15</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">16</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">17</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">18</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">19</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">20</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">21</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">22</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">23</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">24</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">25</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">26</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">27</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">28</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">29</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-button--round var-day-picker__button var-day-picker__button--usable\\" var-day-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">30</div>
                  </button></li>
              </ul>
            </div>
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test datePicker style and type test datePicker style and month 1`] = `
"<div class=\\"var-date-picker var-elevation--2\\">
  <div class=\\"var-date-picker-title\\" style=\\"background: purple;\\">
    <div class=\\"var-date-picker-title__year\\">2021</div>
    <div class=\\"var-date-picker-title__date var-date-picker-title__date--active\\">
      <transition-stub>
        <div>四月</div>
      </transition-stub>
    </div>
  </div>
  <div class=\\"var-date-picker-body\\">
    <transition-stub>
      <div class=\\"var-month-picker__panel\\">
        <div class=\\"var-month-picker__content\\">
          <div class=\\"var-picker-header\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-default var-button--round\\" style=\\"filter: opacity(0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: transform 0ms;\\"></i></div>
            </button>
            <div class=\\"var-picker-header__value\\">
              <transition-stub>
                <div>2021</div>
              </transition-stub>
            </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-default var-button--round\\" style=\\"filter: opacity(0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: transform 0ms;\\"></i></div>
            </button>
          </div>
          <transition-stub>
            <ul>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">一月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">二月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">三月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-elevation--2 var-button--primary var-month-picker__button\\" style=\\"background: rgb(123, 184, 114);\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"false\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">四月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">五月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">六月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">七月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">八月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">九月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">十月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">十一月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text var-button--text-primary var-month-picker__button\\" var-month-picker-cover=\\"\\" var-date-picker-color-cover=\\"true\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">十二月</div>
                </button></li>
            </ul>
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;
